# colrag

./: .env.example  .gitignore  Annual_project.ipynb  Dockerfile  Projet Annuel.ipynb  README.md  alembic.ini  docker-compose.yml  notes.txt  pyproject.toml  requirements.txt  start.sh  todo.txt
PoC/: main.py
PoC/test_data/: bingo.txt  test.csv
alembic/: env.py
alembic/versions/: 1e5b5c37a7fc_create_users_and_documents_tables.py
data/qdrant_storage/: raft_state.json
qdrant_data/: raft_state.json
qdrant_data/collections/Document/: config.json
qdrant_data/collections/Document/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/Reddit Collection test 2/0/: newest_clocks.json
src/app/backend/: main.py  reddit.py
src/app/backend/auth/: utils.py
src/app/backend/database/: db.py  vector_db.py
src/app/backend/documents/: models.py  utils.py
src/app/backend/pipelines/: main.py  reddit_retrieval_pipeline.py  requirements.txt  retrieval_pipeline.py  test_index_pdf.py  wikipedia_retrieval_pipeline.py
src/app/backend/reddit/: reddit.py
src/app/backend/routes/: auth.py  c.py  chat.py  document.py  reddit.py  user.py  wikipedia.py  workspace.py
src/app/backend/tests/: conftest.py  test_documents.py
src/app/backend/workspaces/: models.py
src/app/frontend/Annual_front/: README.md  package-lock.json  package.json  quasar.config.js
terraform/: main.tf
volume/cache/: machine.json
volumes/milvus/rdb_data/: IDENTITY  LOG
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
volumes/minio/.minio.sys/: format.json
(+169 files in other folders)
