[tool.poetry]
name = "pa"
version = "0.1.0"
description = ""
authors = ["ahmed <ahmed@opsci.ai>", "Adrien <adrien.nordin@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
psycopg2 = "^2.9.9"
uvicorn = "^0.31.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
haystack-ai = "^2.6.1"
fastapi-cli = "^0.0.5"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
colorlog = "^6.8.2"
fastapi = {extras = ["standard"], version = "^0.115.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
